# reed-solomon

./: configure  configure.in  encode_rs_ccsds.c  exercise.c  gen_ccsds.c  gen_ccsds_tal.c  makefile.in  rstest.c
